Update api user