@@ -4,8 +4,8 @@ import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
+import com.multishop.repository.UserRepository;
 import org.modelmapper.ModelMapper;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
@@ -27,14 +27,29 @@ import lombok.RequiredArgsConstructor;
 public class UserConverter {
 
 	private final ModelMapper modelMapper;
-	private final BCryptPasswordEncoder byBCryptPasswordEncoder;
+	private final BCryptPasswordEncoder bCryptPasswordEncoder;
 	private final RoleRepository roleRepository;
+    private final UserRepository userRepository;
 	private final AddressConverter addressConverter;
 
 	public User covertToEntity(UserRequest userRequest) {
+
+        User existingUser = null;
+        if (userRequest.getId() != null) existingUser = userRepository.findById(userRequest.getId()).orElse(null);
+
 		User user = modelMapper.map(userRequest, User.class);
 
-		user.setPassword(byBCryptPasswordEncoder.encode(userRequest.getPassword()));
+		if (userRequest.getPassword() != null) {
+            user.setPassword(bCryptPasswordEncoder.encode(userRequest.getPassword()));
+            if (existingUser != null) {
+                user.setId(existingUser.getId());
+            }
+        } else {
+            if (existingUser != null) {
+                user.setId(existingUser.getId());
+                user.setPassword(existingUser.getPassword());
+            }
+        }
 
 		if (userRequest.getProvider() != null) user.setProvider(AuthProvider.valueOf(userRequest.getProvideId()));
 
@@ -50,9 +65,11 @@ public class UserConverter {
 		}
 		user.setRoles(roles);
 
-		List<Address> addresses = new ArrayList<>();
-		userRequest.getAddresses().forEach(item -> addresses.add(addressConverter.convertToEntity(item)));
-		user.setAddresses(addresses);
+		if (userRequest.getAddresses() != null && !userRequest.getAddresses().isEmpty()) {
+            List<Address> addresses = new ArrayList<>();
+            userRequest.getAddresses().forEach(item -> addresses.add(addressConverter.convertToEntity(item)));
+            user.setAddresses(addresses);
+        }
 
 		return user;
 	}
@@ -60,13 +77,15 @@ public class UserConverter {
 	public UserResponse convertToResponse(User user) {
 		UserResponse userResponse = modelMapper.map(user, UserResponse.class);
 
-		userResponse.setProvider(user.getProvider().name());
+		if (user.getProvider() != null) userResponse.setProvider(user.getProvider().name());
 		userResponse
-				.setRoleCode(user.getRoles().stream().map(item -> item.getCode().name()).collect(Collectors.toList()).get(0));
+				.setRoleCode(user.getRoles().stream().map(item -> item.getCode().name()).toList().getFirst());
 
-		List<AddressDTO> addresses = new ArrayList<>();
-		user.getAddresses().forEach(item -> addresses.add(addressConverter.convertToDTO(item)));
-		userResponse.setAddresses(addresses);
+		if (user.getAddresses() != null && !user.getAddresses().isEmpty()) {
+            List<AddressDTO> addresses = new ArrayList<>();
+            user.getAddresses().forEach(item -> addresses.add(addressConverter.convertToDTO(item)));
+            userResponse.setAddresses(addresses);
+        }
 
 		return userResponse;
 	}
